# jupyter-http-terminal

./: LICENSE  MANIFEST.in  environment.yml  pyproject.toml  setup.py
jupyter_http_terminal/: server.py
jupyter_http_terminal/static/: index.html
