[tool.poetry]
name = "jupyter-http-terminal"
version = "0.1.0"
description = "A Jupyter server proxy application that provides an HTTP-based terminal interface"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-server-proxy = "^1.4.0"
notebook = "^6.5.4"
aiohttp = "^3.8.5"
ptyprocess = "^0.7.0"
websockets = "^11.0.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"